Fix website header on tablets

--- a/docs/_sass/jekyll-theme-minimal.scss
+++ b/docs/_sass/jekyll-theme-minimal.scss
@@ -275,7 +275,7 @@ footer {
 @media print, screen and (min-width: 721px) and (max-width: 960px) {
 
   header .description {
-    margin:0 0 55px;
+    margin:0 0 119px;
   }
 
   header ul:last-child {
